[gd_scene load_steps=73 format=2]

[ext_resource path="res://player/Player.png" type="Texture" id=1]
[ext_resource path="res://player/Player1.gd" type="Script" id=2]
[ext_resource path="res://effects/Fx_pack/2/1_6.png" type="Texture" id=3]
[ext_resource path="res://effects/Fx_pack/2/1_4.png" type="Texture" id=4]
[ext_resource path="res://effects/Fx_pack/2/1_0.png" type="Texture" id=5]
[ext_resource path="res://effects/Fx_pack/2/1_2.png" type="Texture" id=6]
[ext_resource path="res://effects/Fx_pack/2/1_5.png" type="Texture" id=7]
[ext_resource path="res://effects/Fx_pack/2/1_7.png" type="Texture" id=8]
[ext_resource path="res://effects/Fx_pack/2/1_1.png" type="Texture" id=9]
[ext_resource path="res://effects/Fx_pack/2/1_3.png" type="Texture" id=10]
[ext_resource path="res://effects/Fx_pack/2/1_25.png" type="Texture" id=11]
[ext_resource path="res://effects/Fx_pack/2/1_11.png" type="Texture" id=12]
[ext_resource path="res://effects/Fx_pack/2/1_26.png" type="Texture" id=13]
[ext_resource path="res://effects/Fx_pack/2/1_27.png" type="Texture" id=14]
[ext_resource path="res://effects/Fx_pack/2/1_14.png" type="Texture" id=15]
[ext_resource path="res://effects/Fx_pack/2/1_13.png" type="Texture" id=16]
[ext_resource path="res://effects/Fx_pack/2/1_15.png" type="Texture" id=17]
[ext_resource path="res://effects/Fx_pack/2/1_19.png" type="Texture" id=18]
[ext_resource path="res://effects/Fx_pack/2/1_20.png" type="Texture" id=19]
[ext_resource path="res://effects/Fx_pack/2/1_18.png" type="Texture" id=20]
[ext_resource path="res://effects/Fx_pack/2/1_12.png" type="Texture" id=21]
[ext_resource path="res://effects/Fx_pack/2/1_21.png" type="Texture" id=22]
[ext_resource path="res://effects/Fx_pack/2/1_22.png" type="Texture" id=23]
[ext_resource path="res://effects/Fx_pack/2/1_17.png" type="Texture" id=24]
[ext_resource path="res://effects/Fx_pack/2/1_16.png" type="Texture" id=25]
[ext_resource path="res://effects/Fx_pack/2/1_23.png" type="Texture" id=26]
[ext_resource path="res://effects/Fx_pack/2/1_24.png" type="Texture" id=27]
[ext_resource path="res://effects/Fx_pack/2/1_45.png" type="Texture" id=28]
[ext_resource path="res://effects/Fx_pack/2/1_55.png" type="Texture" id=29]
[ext_resource path="res://effects/Fx_pack/2/1_50.png" type="Texture" id=30]
[ext_resource path="res://effects/Fx_pack/2/1_46.png" type="Texture" id=31]
[ext_resource path="res://effects/Fx_pack/2/1_58.png" type="Texture" id=32]
[ext_resource path="res://effects/Fx_pack/2/1_60.png" type="Texture" id=33]
[ext_resource path="res://effects/Fx_pack/2/1_49.png" type="Texture" id=34]
[ext_resource path="res://effects/Fx_pack/2/1_54.png" type="Texture" id=35]
[ext_resource path="res://effects/Fx_pack/2/1_52.png" type="Texture" id=36]
[ext_resource path="res://effects/Fx_pack/2/1_56.png" type="Texture" id=37]
[ext_resource path="res://effects/Fx_pack/2/1_57.png" type="Texture" id=38]
[ext_resource path="res://effects/Fx_pack/2/1_48.png" type="Texture" id=39]
[ext_resource path="res://effects/Fx_pack/2/1_47.png" type="Texture" id=40]
[ext_resource path="res://effects/Fx_pack/2/1_53.png" type="Texture" id=41]
[ext_resource path="res://effects/Fx_pack/2/1_59.png" type="Texture" id=42]
[ext_resource path="res://effects/Fx_pack/2/1_51.png" type="Texture" id=43]
[ext_resource path="res://effects/Fx_pack/2/1_33.png" type="Texture" id=44]
[ext_resource path="res://effects/Fx_pack/2/1_29.png" type="Texture" id=45]
[ext_resource path="res://effects/Fx_pack/2/1_37.png" type="Texture" id=46]
[ext_resource path="res://effects/Fx_pack/2/1_39.png" type="Texture" id=47]
[ext_resource path="res://effects/Fx_pack/2/1_38.png" type="Texture" id=48]
[ext_resource path="res://effects/Fx_pack/2/1_35.png" type="Texture" id=49]
[ext_resource path="res://effects/Fx_pack/2/1_40.png" type="Texture" id=50]
[ext_resource path="res://effects/Fx_pack/2/1_36.png" type="Texture" id=51]
[ext_resource path="res://effects/Fx_pack/2/1_41.png" type="Texture" id=52]
[ext_resource path="res://effects/Fx_pack/2/1_42.png" type="Texture" id=53]
[ext_resource path="res://effects/Fx_pack/2/1_31.png" type="Texture" id=54]
[ext_resource path="res://effects/Fx_pack/2/1_28.png" type="Texture" id=55]
[ext_resource path="res://effects/Fx_pack/2/1_34.png" type="Texture" id=56]
[ext_resource path="res://effects/Fx_pack/2/1_43.png" type="Texture" id=57]
[ext_resource path="res://effects/Fx_pack/2/1_44.png" type="Texture" id=58]
[ext_resource path="res://effects/Fx_pack/2/1_30.png" type="Texture" id=59]
[ext_resource path="res://effects/Fx_pack/2/1_32.png" type="Texture" id=60]
[ext_resource path="res://effects/Fx_pack/2/1_9.png" type="Texture" id=61]
[ext_resource path="res://effects/Fx_pack/2/1_8.png" type="Texture" id=62]
[ext_resource path="res://effects/Fx_pack/2/1_10.png" type="Texture" id=63]
[ext_resource path="res://Power-Ups/shield.png" type="Texture" id=64]
[ext_resource path="res://Power-Ups/shield_trans.png" type="Texture" id=65]
[ext_resource path="res://audio/shot_sound.mp3" type="AudioStream" id=66]
[ext_resource path="res://audio/beep-warning-6387.mp3" type="AudioStream" id=67]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 62 ), ExtResource( 61 ), ExtResource( 63 ), ExtResource( 12 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 55 ), ExtResource( 45 ), ExtResource( 59 ), ExtResource( 54 ), ExtResource( 60 ), ExtResource( 44 ), ExtResource( 56 ), ExtResource( 49 ), ExtResource( 51 ), ExtResource( 46 ), ExtResource( 48 ), ExtResource( 47 ), ExtResource( 50 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 28 ), ExtResource( 31 ), ExtResource( 40 ), ExtResource( 39 ), ExtResource( 34 ), ExtResource( 30 ), ExtResource( 43 ), ExtResource( 36 ), ExtResource( 41 ), ExtResource( 35 ), ExtResource( 29 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 32 ), ExtResource( 42 ), ExtResource( 33 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1134, 423, 189, 423 )

[sub_resource type="GDScript" id=5]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "NASA",
"speed": 5.0
} ]
script = SubResource( 5 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 35.2476
height = 58.7286

[node name="Player1" type="KinematicBody2D" groups=["player"]]
position = Vector2( -1, -1 )
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 0.0 ]
}

[node name="Fire1" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 33, 168 )
rotation = -1.5708
scale = Vector2( 3.05957, 1.72318 )
frames = SubResource( 6 )
frame = 1
playing = true

[node name="Fire2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -54, 183 )
rotation = -1.5708
scale = Vector2( 3.52779, 2.20746 )
frames = SubResource( 6 )
frame = 21
playing = true

[node name="Fire3" type="AnimatedSprite" parent="."]
position = Vector2( -17, 152 )
rotation = -1.5708
scale = Vector2( 1.86975, 1.53797 )
frames = SubResource( 6 )
frame = 14
playing = true

[node name="Fire4" type="AnimatedSprite" parent="."]
position = Vector2( 0, 148 )
rotation = -1.5708
scale = Vector2( 1.86975, 1.53797 )
frames = SubResource( 6 )
frame = 55
playing = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 0.747065, 0.654255 )
frames = SubResource( 2 )
animation = "NASA"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 27 )
scale = Vector2( 1.50365, 1.25364 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 27 )
scale = Vector2( 1.50365, 1.25364 )
shape = SubResource( 4 )

[node name="BulletPosition" type="Position2D" parent="."]
position = Vector2( 1, -121 )

[node name="Shield_timer" type="Timer" parent="."]

[node name="Shield_sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 1, 27 )
scale = Vector2( 0.205, 0.196667 )
texture = ExtResource( 64 )

[node name="ShieldTrans" type="Sprite" parent="."]
visible = false
position = Vector2( 1, 28 )
scale = Vector2( 0.823358, 0.804796 )
texture = ExtResource( 65 )

[node name="speed_timer" type="Timer" parent="."]

[node name="shot_sound_effect" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 1, 1 )
stream = ExtResource( 66 )

[node name="health_low_effect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 67 )

[connection signal="child_entered_tree" from="." to="." method="_on_Player1_child_entered_tree"]
[connection signal="spawn_laser" from="." to="." method="_on_Player1_spawn_laser"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Shield_timer" to="." method="_on_Shield_timer_timeout"]
[connection signal="timeout" from="speed_timer" to="." method="_on_speed_timer_timeout"]
